--- a/styles/style.css
+++ b/styles/style.css
@@ -5,39 +5,36 @@
 }
 
 body {
-    background-image: linear-gradient(120deg, #e2c35d, #d88771);
-    color: white;
+    background-color: #f7f7f7;
+    /* color: white; */
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
 }
 
-header {
-    font-size: 1.5rem;
-}
-
-header, form {
+form {
     min-height: 20vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
 }
 
 form input, form button {
     padding: 0.5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: none;
     background: white;
 }
 
 form button {
-    color: #d88771;
+    color: #2d98da;
     background: white;
     cursor: pointer;
     transition: all, 0.3s ease;
 }
 
 form button:hover {
-    background: #d88771;
+    background: #2d98da;
     color: white;
 }
 
@@ -72,7 +69,7 @@ form button:hover {
 }
 
 .delete-btn, .complete-btn {
-    background: #ff6f47;
+    background: #ff4d4d;
     color: white;
     border: none;
     padding: 1rem;
@@ -119,7 +116,7 @@ select {
 }
 
 select {
-    color: #d88771;
+    color: #2d98da;
     background: white;
     cursor: pointer;
     width: 10rem;
@@ -130,9 +127,10 @@ select {
 .select::after {
     content: "\25BC";
     position: absolute;
-    background: #d88771;
+    background: #2d98da;
     top: 0;
     right: 0;
     padding: 1rem;
     pointer-events: none;
+    color: white;
 }
